# Convolutional-neural-networks-for-classification-of-alignments-of-non-coding-RNA-sequences

./: AssembleMatrix.py  MakeNcRNAMatrix.py  README  README.md  RNApairClassify.py  runMakeNcRNAMatrix.sh  啥都队v1.1.ppt
dafscnn/: ChangeLog  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
dafscnn/autom4te.cache/: output.0  traces.0
dafscnn/examples/: RF00017_4.fa
dafscnn/m4/: ax_func_getopt_long.m4
dafscnn/src/: Makefile  Makefile.am  Makefile.in  alifold.cpp  alifold.h  align.cpp  align.h  cmdline.c  cmdline.h  dafs.cpp  dafs.ggo  fa.cpp  fa.h  fold.cpp  fold.h  ipknot.cpp  ipknot.h  needleman_wunsch.cpp  needleman_wunsch.h  nussinov.cpp  nussinov.h  tree.cpp  tree.h  typedefs.h
dafscnn/src/contrafold/: Makefile  Makefile.am  Makefile.in  contrafold.h  wrapper.cpp
dafscnn/src/contralign/: COPYING  Contralign.cpp  InferenceEngine.ipp  Makefile  Makefile.am  Makefile.in  Utilities.ipp
dafscnn/src/partalign/: Makefile.am  lbfgsb.c  lbfgsb.h  log_value.h  optimizer.cpp  optimizer.h  pa_train.cpp  partalign.cpp  partalign.h
dafscnn/src/probconsRNA/: Makefile  Makefile.am  Makefile.in
model/: CNNmodel.py  DatasetMaker.py
outdir/portion/: ncRNApair_label0.npy  ncRNApair_label1.npy
testdata/: 6families_sequence.fa  genelabel_6families.txt
